--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "gulp-sass": "^3.1.0",
     "gulp-scss": "^1.4.0",
     "gulp-uglify": "^3.0.0",
+    "gulp-util": "^3.0.8",
     "pump": "^1.0.2",
     "require-dir": "^0.3.2",
     "run-sequence": "^2.2.0",
@@ -30,5 +31,6 @@
     "url": "https://github.com/mato84/Buss.test/issues"
   },
   "homepage": "https://github.com/mato84/Buss.test#readme",
+  "dependencies": {},
   "description": ""
 }
