--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@ tasks
 sftp-config.jso
 sftp-config.json
 system/storage/vendor/*
-.gulpfile.js
+gulpfile.js
 
 # Config and Htaccess Files
 .htaccess
